--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "type": "git"
   },
   "scripts": {
-    "lint": "eslint --ext .jsx,.js .",
-    "start": "NODE_ENV=development webpack-dev-server --https",
-    "build:dev": "NODE_ENV=development webpack",
-    "build:prod": "NODE_ENV=production webpack -p",
-    "precommit": "npm run lint"
+    "lint": "eslint --ext .jsx,.js src",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
+    "precommit": "lint-staged && yarn lint",
+    "prettier": "prettier --single-quote --write \"src/**/*.{js,jsx}\""
   },
   "contributors": [
     {
@@ -19,36 +22,35 @@
       "email": "patrickcoffey48@gmail.com"
     }
   ],
+  "lint-staged": {
+    "src/**/*.{js,jsx,json,css}": [
+      "prettier --single-quote --write",
+      "git add"
+    ]
+  },
   "license": "GPL-3.0",
   "engines": {
-    "node": ">=7.7.2"
+    "node": ">=8.1.3"
   },
+  "homepage": "https://fourkitchens.github.io/aframe-boilerplate/",
   "devDependencies": {
-    "babel-core": "^6.24.0",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.4.0",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
-    "condition-circle": "^1.5.0",
-    "css-loader": "^0.27.3",
-    "eslint": "^3.17.1",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.0",
-    "favicons-webpack-plugin": "^0.0.7",
-    "file-loader": "^0.10.1",
-    "html-webpack-plugin": "^2.28.0",
-    "husky": "^0.13.2",
-    "raw-loader": "^0.5.1",
-    "style-loader": "^0.14.1",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.2"
+    "eslint": "^4.2.0",
+    "eslint-config-airbnb": "^15.0.2",
+    "eslint-config-prettier": "^2.3.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "^7.1.0",
+    "gh-pages": "^1.0.0",
+    "husky": "^0.14.3",
+    "last-release-git": "^0.0.3",
+    "lint-staged": "^4.0.2",
+    "prettier": "^1.5.3",
+    "react-scripts": "^1.0.10"
   },
   "dependencies": {
-    "aframe": "^0.5.0",
-    "aframe-react": "^4.0.3",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "aframe": "^0.6.0",
+    "aframe-react": "^4.3.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   }
 }
