--- a/circle.yml
+++ b/circle.yml
@@ -1,25 +1,22 @@
+version: 1
 machine:
   node:
-    version: v7.7.2
+    version: v8.1.3
+  environment:
+    PATH: "${PATH}:${HOME}/${CIRCLE_PROJECT_REPONAME}/node_modules/.bin"
+dependencies:
+  override:
+    - yarn
+  cache_directories:
+    - ~/.cache/yarn
 test:
   override:
-    - "true"
+    - yarn lint
 deployment:
   publish:
     branch: master
     commands:
-      - npm run lint
+      - yarn predeploy
       - git config --global user.email "patrickcoffey48@gmail.com"
       - git config --global user.name "Deployment Bot"
-      - git fetch
-      - git checkout master
-      - git pull origin master
-      - git checkout gh-pages
-      - git pull origin gh-pages
-      - git merge master -m "Merge in for deployment."
-      - npm run build:prod
-      - git add -A
-      - git commit -m "Deployment from PR merge."
-      - git push origin gh-pages
-      - npm run semantic-release || true
-
+      - yarn deploy
